--- a/assets/deveb-s1n0/_dil-tr.scss
+++ b/assets/deveb-s1n0/_dil-tr.scss
@@ -14,6 +14,8 @@ $dev: dev;
 /* Kap Örgüsü */
 $soldan: soldan;
 $sağdan: sağdan;
+$tamekran: tamekran;
+$sığ: sığ;
 
 /* Sıralama Düzeni */
 $nc: nc;
