--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -176,9 +176,10 @@
     body[data-#{$ekran}~="#{$tamekran}"]{
       flex: 1 1 0 !important;
       overflow: auto;
-      max-height: 100%;
+      width:100%;
+      height:100%;
       flex-direction: column;
-      min-height: 100vh;
+      position: fixed; 
     }
   }
 
