--- a/_includes/s1n0/head.html
+++ b/_includes/s1n0/head.html
@@ -3,6 +3,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{% if page.title %}{{ page.title }}{% endif %}</title>
 
+<meta name="title" content="{% if page.title %}{{ page.title }}{% endif %}">
+<meta name="description" content="{% if page.description %}{{ page.description }}{% endif %}">
+<meta name="keywords" content="frontend framework, türkçe önyüz çatısı, flex responsive">
+<meta name="robots" content="index, follow">	
+<meta name="language" content="Turkish">
+<meta name="revisit-after" content="1 days">
+<meta name="author" content="deveb">
+
 <!-- Kök -->
 <link href="/assets/deveb-s1n0/deveb.css" rel="stylesheet">
 <link href="/assets/css/imge.css" rel="stylesheet">
