deveb 1.0 kap örgüsü
kap örgüsü sadeleştirmede güncelleme.

--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -438,6 +438,8 @@
 
     [data-#{$gnl}]{
       --parça: 1; --parçalık:1;
+      --aaa:24; --a-a:0;
+      --bbb:24; --b-b:24;
     }
     [data-#{$gnl}],[data-#{$ufk}],[data-#{$kçk}],[data-#{$ort}],[data-#{$byk}],[data-#{$kcm}],[data-#{$dev}]{
       display:flex;
