--- a/assets/deveb-s1n0/deveb-en.css
+++ b/assets/deveb-s1n0/deveb-en.css
@@ -146,6 +146,10 @@ ul h1, ul h2, ul h3, ul h4, ul h5, ul h6 {
 [data-gnl] {
   --parça: 1;
   --parçalık:1;
+  --aaa:24;
+  --a-a:0;
+  --bbb:24;
+  --b-b:24;
 }
 
 [data-gnl], [data-xs], [data-sm], [data-md], [data-lg], [data-xl], [data-hg] {
